--- a/outputs/past_analyses.Rmd
+++ b/outputs/past_analyses.Rmd
@@ -15,9 +15,6 @@ University of South Dakota
 # Purpose
 To predict hospital bed needs, ICU needs, and ventilator needs in South Dakota due to COVID-19. 
 
-# Updates
-*We updated the model from previous versions by 1) varying generation times in each simulation and 2) varying hospitalization rates, icu rates, and ventilator rates in each simulation. Previous versions of this model assumed fixed rates for these parameters. 
-
 # General Approach and Justification
 We estimated R0 from current incidence rates in South Dakota. We then fit SIR models using our estimates of R0 and compared model predictions to actual values of hospitalizations reported by the South Dakota Department of Health (data source: https://www.keloland.com/keloland-com-original/why-south-dakotas-number-of-deaths-isnt-always-up-to-date/. We chose this approach because it does not rely on external estimates of R0, but instead derives them from data specific to South Dakota.
 
@@ -129,30 +126,27 @@ ggsave(plot_r, file = here::here("plots/plot_r.jpg"), width = 6, height = 6)
 plot_r
 ```
 
-We estimated R0 by fitting the R0 equation above to 4000 iterations of the posterior distribution of *r*. To include uncertainty in generation time, each estimate of *r* was multiplied by a different generation time, drawn from a uniform distribution with generation times between 4-8 days. These bounds were chosen based on Park et al. (2020) who estimated a generation time for COVID-19 of 4-8 days - https://www.mdpi.com/2077-0383/9/4/967. 
-
-To apply this uncertainty to our predictions, we sampled 1000 values of R0 from the mean and sd and ran the SIR. This generated 1000 scenarios of disease progression. We assumed a starting date for infection in South Dakota of 2020-02-24. This was chosen because it is two weeks earlier than the first reported cases on 2020-03-10. All SIR models are highly sensitive to starting dates, particularly when predicting the timing of peak infection. The starting date in our model is somewhat arbritray, but assumes that the first report of tested cases must have come after the actual initial infectsion from COVID-19. 
+We simulated uncertainty in R0 by sampling from the posterior distribution of *r* 500 times and re-calculating the equation for R0 each time. We did this under three scenarios of generation time (4, 6, or 7 days). These were chosen based on Park et al. (2020) who estimated a generation time for COVID-19 of 4-8 days - https://www.mdpi.com/2077-0383/9/4/967. The table below shows the estimated R0 under three assumptions of generation time. Five hundred samples from these values were entered into the following SIR model:
  
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 #extract slope mean and CI and estimate R0 from equation above
-shape_gt = 6^2/2^2 #fit by eye to represent range of reported generation times in Park et al. 2020
-rate_gt = 6/2^2 #fit by eye to represent range of reported generation times in Park et al. 2020
-
-# plot(density(rgamma(1000, shape = shape_gt, rate = rate_gt)))
-
 posts <- as_tibble(posterior_samples(lin_reg)) %>% 
   rename(r = b_date_num) %>% 
   select(r) %>% 
-  mutate(gt_days = runif(nrow(.), 4,8)) %>% 
+  mutate(GT7 = 7,
+         GT6 = 6,
+         GT4 = 4) %>% 
+  gather(generation_time, gt_days, c(GT7, GT6, GT4)) %>% 
   mutate(R0 = 1 + gt_days*r)
 
 r0_mean_sd <- posts %>% 
+  group_by(generation_time) %>% 
   summarize(mean = round(mean(R0),2),
             sd = round(sd(R0),2))
 
-kable_styling(kable(r0_mean_sd, caption = "Table 1. R0 mean and standard deviation sampled from to fit the SIR model.", 
+kable_styling(kable(r0_mean_sd, caption = "Table 1. R0 values and generation times (days) used to fit the SIR model.", 
       format = "pandoc"),full_width = F) %>%
-   column_spec(column = 1:2, width = "2in") %>%
+   column_spec(column = 1:2, width = "3in") %>%
    kable_styling(c("bordered", "condensed"), full_width = F)
 ```
 
@@ -200,153 +194,154 @@ parms <- c(beta=beta,gamma= gamma)
 times <- seq(from = 0, to = 200, by = 1)
 xstart <- c(S = 0.99999, I = 0.000001, R = 0.000009)   # assumes almost no intitial immunity
 
-N <- 1000
+#4 day generation time
+N <- 500
 r0sims4 <- posts %>% 
+  filter(gt_days == 4) %>% 
   select(R0) %>% 
   sample_n(N) %>% pull()
 
 out4 <- list()
 for (i in 1:N) {
   out4[[i]] <- ode(
-    func=closed.sir.model,
-    y=xstart,
-    times=times,
-    parms= c(beta=gamma*r0sims4[i],gamma = gamma)) %>%
-    as.data.frame() %>% 
-    gather(variable, value, -time) %>% 
+  func=closed.sir.model,
+  y=xstart,
+  times=times,
+  parms= c(beta=gamma*r0sims4[i],gamma = gamma)) %>%
+  as.data.frame() %>% 
+  gather(variable, value, -time) %>% 
     mutate(R0 = r0sims4[i])
   out_noimmune4 <- out4
 }
 
+#6 day generation time
+N <- 500
+r0sims6 <- posts %>% 
+  filter(gt_days == 6) %>% 
+  select(R0) %>% 
+  sample_n(N) %>% pull()
 
-m_test <- bind_rows(out_noimmune4) %>% 
-  mutate(iter = rep(1:N, each = 603),
-         date = as_date(time + as.numeric(ymd("2020-02-24"))))
-
-test_sims <- m_test %>% 
-  group_by(date, variable) %>% 
-  mutate(number = value*884235) %>% 
-  summarize(mean = median(number),
-            lci95 = quantile(number, probs = 0.025),
-            lci50 = quantile(number, probs = 0.25),
-            lci25 = quantile(number, probs = 0.345),
-            uci25 = quantile(number, probs = 0.655),
-            uci50 = quantile(number, probs = 0.75),
-            uci95 = quantile(number, probs = 0.975))
-
-#get parameters of hosp, icu, and vent rate to enter into a beta distibution
-
-hosp_rate_mean = 0.03
-hosp_rate_sd = 0.015
-alpha_beta = (hosp_rate_mean^2 - hosp_rate_mean^3 - hosp_rate_mean*(hosp_rate_sd^2))/hosp_rate_sd^2
-beta_beta = (hosp_rate_mean - 2*hosp_rate_mean^2 + hosp_rate_mean^3 - hosp_rate_sd^2 + hosp_rate_mean*hosp_rate_sd^2)/hosp_rate_sd^2
+out6 <- list()
+for (i in 1:N) {
+  out6[[i]] <- ode(
+    func=closed.sir.model,
+    y=xstart,
+    times=times,
+    parms= c(beta=gamma*r0sims6[i],gamma = gamma)) %>%
+    as.data.frame() %>% 
+    gather(variable, value, -time) %>% 
+    mutate(R0 = r0sims6[i])
+  out_noimmune6 <- out6
+}
 
 
-icu_rate_mean = 0.015
-icu_rate_sd = 0.005
-alpha_beta_icu = (icu_rate_mean^2 - icu_rate_mean^3 - icu_rate_mean*(icu_rate_sd^2))/icu_rate_sd^2
-beta_beta_icu = (icu_rate_mean - 2*icu_rate_mean^2 + icu_rate_mean^3 - icu_rate_sd^2 + icu_rate_mean*icu_rate_sd^2)/icu_rate_sd^2
+#7 day generation time
+N <- 500
+r0sims7 <- posts %>% 
+  filter(gt_days == 7) %>% 
+  select(R0) %>% 
+  sample_n(N) %>% pull()
+
+out7 <- list()
+for (i in 1:N) {
+  out7[[i]] <- ode(
+    func=closed.sir.model,
+    y=xstart,
+    times=times,
+    parms= c(beta=gamma*r0sims7[i],gamma = gamma)) %>%
+    as.data.frame() %>% 
+    gather(variable, value, -time) %>% 
+    mutate(R0 = r0sims7[i])
+  out_noimmune7 <- out7
+}
 
 
-vent_rate_mean = 0.0084
-vent_rate_sd = 0.001
-alpha_beta_vent = (vent_rate_mean^2 - vent_rate_mean^3 - vent_rate_mean*(vent_rate_sd^2))/vent_rate_sd^2
-beta_beta_vent = (vent_rate_mean - 2*vent_rate_mean^2 + vent_rate_mean^3 - vent_rate_sd^2 + vent_rate_mean*vent_rate_sd^2)/vent_rate_sd^2
-
-# all_hosp <- as_tibble(m_test) %>% 
-#   filter(variable != "I") %>%
-#   pivot_wider(names_from = variable, values_from = value) %>% 
-#   group_by(iter) %>% 
-#   mutate(i_cumulative = 1 - min(R) - S,
-#          hosp_rate = 0.04*0.375,
-#          hosp_length_days = 7,
-#          icu_hosp_number = 1:201,
-#          icu_rate_of_hosp_rate = 0.015*0.375,
-#          icu_length_days = 8,
-#          vent_rate_of_icu_rate = 0.0084*0.375,
-#          vent_length_days = 10,
-#          hospital_beds = hosp_rate*(i_cumulative - lag(i_cumulative , 7)) + icu_rate_of_hosp_rate*(lag(i_cumulative , 7) - lag(i_cumulative , 8)),
-#          icu_beds = icu_rate_of_hosp_rate*(i_cumulative - lag(i_cumulative , 8)),
-#          ventilators = vent_rate_of_icu_rate*(i_cumulative - lag(i_cumulative, 10))) %>% 
-#   gather(medical_need, value, c(hospital_beds, icu_beds, ventilators)) 
+m4 <- bind_rows(out_noimmune4) %>% 
+  mutate(gt = 4,
+         iter = rep(1:N, each = 603),
+         date = as_date(time + as.numeric(ymd("2020-02-22"))))
+m6 <- bind_rows(out_noimmune6) %>% 
+  mutate(gt = 6,
+         iter = rep(1:N, each = 603),
+         date = as_date(time + as.numeric(ymd("2020-02-22"))))
+m7 <- bind_rows(out_noimmune7) %>% 
+  mutate(gt = 7,
+         iter = rep(1:N, each = 603),
+         date = as_date(time + as.numeric(ymd("2020-02-22"))))
 
 
 
-all_hosp <- as_tibble(m_test) %>% 
-  filter(variable != "I") %>%
+all_sims <- bind_rows(m4,m6,m7) %>% 
+  mutate(generation_time = paste(gt,"day generation time"))
+
+
+all_hosp <- as_tibble(all_sims) %>% filter(variable != "I") %>%
   pivot_wider(names_from = variable, values_from = value) %>% 
-  group_by(iter) %>% 
+  group_by(iter,gt) %>% 
   mutate(i_cumulative = 1 - min(R) - S,
-         hosp_rate = rbeta(201, alpha_beta, beta_beta),
+         hosp_rate = 0.04*0.375,
          hosp_length_days = 7,
          icu_hosp_number = 1:201,
-         icu_rate_of_hosp_rate = rbeta(201, alpha_beta_icu, beta_beta_icu),
+         icu_rate_of_hosp_rate = 0.015*0.375,
          icu_length_days = 8,
-         vent_rate_of_icu_rate = rbeta(201, alpha_beta_vent, beta_beta_vent),
-         vent_length_days = 10) %>% 
-  mutate(hospital_beds = hosp_rate*(i_cumulative - lag(i_cumulative , 7)) + 
-           icu_rate_of_hosp_rate*(lag(i_cumulative , 7) - lag(i_cumulative , 8)),
+         vent_rate_of_icu_rate = 0.0084*0.375,
+         vent_length_days = 10,
+         hospital_beds = hosp_rate*(i_cumulative - lag(i_cumulative , 7)) + icu_rate_of_hosp_rate*(lag(i_cumulative , 7) - lag(i_cumulative , 8)),
          icu_beds = icu_rate_of_hosp_rate*(i_cumulative - lag(i_cumulative , 8)),
          ventilators = vent_rate_of_icu_rate*(i_cumulative - lag(i_cumulative, 10))) %>% 
-  gather(medical_need, value, c(hospital_beds, icu_beds, ventilators)) 
+  gather(medical_need, value, c(hospital_beds, icu_beds, ventilators)) %>% 
+  mutate(generation_time = paste(gt,"day generation time"))
 
 
-cum_hosp <- all_hosp %>% 
-  group_by(iter) %>% 
-  filter(medical_need == "hospital_beds") %>% 
-  drop_na(value) %>% 
-  mutate(cum_hosp = cumsum(value*884235))
 
-# cum_hosp <- as_tibble(m_test) %>% 
-#   filter(variable == "I") %>%  
-#   group_by(iter) %>% 
-#   mutate(cum_i = cumsum(value*884225)) %>% 
-#   mutate(hosp_rate = rbeta(201, alpha_beta, beta_beta),
-#          hosp_length_days = 7,
-#          icu_rate_of_hosp_rate = 0.015*0.375,
-#          vent_rate_of_icu_rate = 0.0084*0.375,
-#          cum_hosp = hosp_rate*cum_i) 
-#   
 
+#make raw data to plot
+d6 <- sd_covid_data %>% mutate(gt = 6)
+d4 <- d6 %>% mutate(gt = 4)
+d7 <- d4 %>% mutate(gt = 7)
+
+
+sd_covid_plot_data <- bind_rows(d4,d6,d7) %>% 
+  mutate(generation_time = paste(gt,"day generation time"))
 ```
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.height=7, fig.width=7}
 #make plots
-full_plot <- test_sims %>% 
+summary_sims <- all_sims %>% 
+  group_by(date, variable, generation_time) %>% 
+  mutate(number = value*884235) %>% 
+  summarize(mean = mean(number),
+            lci = quantile(number, probs = 0.025),
+            uci = quantile(number, probs = 0.975))
+  
+
+full_plot <- summary_sims %>% 
   ggplot(aes(x = date, y = mean)) +
-  geom_ribbon(aes(fill = variable, ymin = lci95, ymax = uci95), alpha = 0.3) +
-  geom_ribbon(aes(fill = variable, ymin = lci50, ymax = uci50), alpha = 0.3) +
-  geom_ribbon(aes(fill = variable, ymin = lci25, ymax = uci25), alpha = 0.3) +
+  geom_ribbon(aes(fill = variable, ymin = lci, ymax = uci)) +
   geom_line(aes(group = variable)) + 
   scale_fill_viridis_d() +
   geom_point(data = sd_covid_data, aes(x = date, y = active_cases),
              shape = 21, size = 2, fill = "yellow") +
   guides(colour = guide_legend(override.aes = list(alpha = 1))) +
-  labs(title = "1000 simulations of SIR",
+  labs(title = "500 simulations of SIR",
        subtitle = "(dots = positive tests)",
        y = "Number of people",
        x = NULL) +
-  # facet_wrap(~generation_time) +
+  facet_wrap(~generation_time) +
   theme(text = element_text(size = 11)) +
   theme_classic()+
-  NULL 
-  
-zoomed_plot <- m_test %>% 
-  group_by(date, variable) %>% 
+    NULL 
+
+zoomed_plot <- all_sims %>% 
+  group_by(date, variable, generation_time) %>% 
   filter(variable == "S") %>% 
   mutate(susceptible = value*884235,
          I_cumulative = 884235-susceptible) %>% 
-  summarize(mean = median(I_cumulative),
-            lci95 = quantile(I_cumulative, probs = 0.025),
-            lci50 = quantile(I_cumulative, probs = 0.25),
-            lci25 = quantile(I_cumulative, probs = 0.345),
-            uci25 = quantile(I_cumulative, probs = 0.655),
-            uci50 = quantile(I_cumulative, probs = 0.75),
-            uci95 = quantile(I_cumulative, probs = 0.975)) %>% 
+  summarize(mean = mean(I_cumulative),
+            lci = quantile(I_cumulative, probs = 0.025),
+            uci = quantile(I_cumulative, probs = 0.975)) %>% 
   ggplot(aes(x = date, y = mean)) +
-  geom_ribbon(aes(fill = variable, ymin = lci95, ymax = uci95), fill = "#7851a9", alpha = 0.3) +
-  geom_ribbon(aes(fill = variable, ymin = lci50, ymax = uci50), fill = "#7851a9", alpha = 0.3) +
-  geom_ribbon(aes(fill = variable, ymin = lci25, ymax = uci25), fill = "#7851a9", alpha = 0.3) +
+  geom_ribbon(aes(fill = variable, ymin = lci, ymax = uci), fill = "#7851a9") +
   geom_line(aes(group = variable)) +
   geom_point(data = sd_covid_data,
              aes(x = date, y = positive_cases), shape = 21,
@@ -354,24 +349,24 @@ zoomed_plot <- m_test %>%
   scale_shape_manual(values = c(21,22,24)) + 
   scale_x_date(limits = ymd(c("2020-02-22", "2020-05-01"))) +
   coord_cartesian(ylim = c(0,3000)) +
-  labs(title = "1000 SIR simulations of cumulative COVID-19 cases",
+  labs(title = "500 SIR simulations of cumulative COVID-19 cases",
        subtitle = "(purple = simulation of actual cases, dots = positive tests)",
        y = "Cumulative cases",
        x = NULL) +
-  # facet_wrap(~generation_time)+
+  facet_wrap(~generation_time)+
   theme(text = element_text(size = 11)) +
   theme_classic() + 
   NULL
 
 both <- plot_grid(full_plot, zoomed_plot, ncol = 1)
 both
-# ggsave(both, file = here::here("plots/cumulative_cases.jpg"), width = 8, height = 8)
+ggsave(both, file = here::here("plots/cumulative_cases.jpg"), width = 8, height = 8)
 ```
 
-The graphs above show the outcome of the SIR model. Lines are the mean predictions, shaded areas are, from inside to outside, 50%, 75%, and 95% quantiles, and the dots are the reported data from SD DOH. 
+The graphs above show the outcome of the SIR model under 4, 6, or 7 day generation times. Lines are the mean predictions, shaded areas are the 2.5 and 97.5% quantiles, and the dots are the reported data from SD DOH. 
 
 #Hospital Beds, ICU beds, and Ventilators
-From the predictions of cases above, we estimated the number of hospital beds, ICU beds, and ventilators needed. To do this, we assumed a mean hospitalization rate of 3.5% with a standard deviation of 1.5%. These values were parameterized as a beta distribution, from which we randomly assigned a hospitalization rate to each of the simulations of infections from the SIR. These values were chosen to capture the large uncertainty in hospitalization rates that may range on any given day between ~1% to 6% of cases according our model. Rates were ICU's and ventilators were similarly determined using the following distributions: ICUs (1.5% +/- 0.5%), Ventilators (0.8% +/- 0.1%). We also assumed a mean stays in the hospital system as a whole of 7, 8, or 10 days for hospitalization, ICU, and ventilators, respectively.
+From the predictions of cases above, we estimated the number of hospital beds, ICU beds, and ventilators needed by assuming that 4% of cases would need hospitalization, 1.5% of cases would need an ICU bed, and 1.05% of cases would need a ventilator. We also assumed a mean stays in the hospital system as a whole of 7, 8, or 10 days for hospitalization, ICU, and ventilator, respectively.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.height=9, fig.width=9}
 sd_hospital_beds <- read_excel(here::here("data/sd_hospital_beds.xlsx")) %>% 
@@ -382,23 +377,17 @@ all_beds <- sum(sd_hospital_beds$total_beds)
 
 #hospitalized data
 hosp <- all_hosp %>% 
-  group_by(date, medical_need) %>% 
+  group_by(date, medical_need, generation_time) %>% 
   mutate(number = value*884235) %>% 
   drop_na(number) %>% 
-  summarize(mean = median(number),
-            lci95 = quantile(number, probs = 0.025),
-            lci50 = quantile(number, probs = 0.25),
-            lci25 = quantile(number, probs = 0.345),
-            uci25 = quantile(number, probs = 0.655),
-            uci50 = quantile(number, probs = 0.75),
-            uci95 = quantile(number, probs = 0.975)) %>% 
+  summarize(mean = mean(number),
+            lci = quantile(number, probs = 0.025),
+            uci = quantile(number, probs = 0.975)) %>% 
   ggplot(aes(x = date, y = mean)) +
-  geom_ribbon(aes(ymin = lci95, ymax = uci95, fill = medical_need), alpha = 0.3) +
-  geom_ribbon(aes(ymin = lci50, ymax = uci50, fill = medical_need), alpha = 0.3) +
-  geom_ribbon(aes(ymin = lci25, ymax = uci25, fill = medical_need), alpha = 0.3) +
+  geom_ribbon(aes(ymin = lci, ymax = uci, fill = medical_need), alpha = 0.7) +
   geom_line(aes(group = medical_need)) +
   scale_fill_viridis_d(option = "E") +
-  facet_wrap(~medical_need) +
+  facet_wrap(~generation_time) +
   geom_hline(yintercept = all_beds) +
   # annotate("text", x = sd_covid_plot_data$date[5], y = 2980, "All Hospital Beds\nin SD") +
   labs(title = "Medical Capacity Needs - predicted",
@@ -410,29 +399,27 @@ hosp <- all_hosp %>%
         legend.position = "top") +
   NULL
 
-
-hosp_zoomed <- cum_hosp %>% 
-  group_by(date) %>% 
-  drop_na(cum_hosp) %>% 
-  summarize(mean = median(cum_hosp),
-            lci95 = quantile(cum_hosp, probs = 0.025),
-            lci50 = quantile(cum_hosp, probs = 0.25),
-            lci25 = quantile(cum_hosp, probs = 0.345),
-            uci25 = quantile(cum_hosp, probs = 0.655),
-            uci50 = quantile(cum_hosp, probs = 0.75),
-            uci95 = quantile(cum_hosp, probs = 0.975)) %>% 
+hosp_zoomed <- all_hosp %>% 
+  filter(medical_need == "hospital_beds") %>% 
+  group_by(date,generation_time) %>%
+  mutate(number = value*884235) %>% 
+  drop_na(number) %>% 
+  group_by(date, iter,generation_time) %>% 
+  mutate(number_cumulative = cumsum(number)) %>%
+  group_by(date,generation_time) %>% 
+    summarize(mean = mean(number_cumulative),
+            lci = quantile(number_cumulative, probs = 0.025),
+            uci = quantile(number_cumulative, probs = 0.975)) %>% 
   ggplot(aes(x = date, y = mean)) +
-  geom_ribbon(aes(ymin = lci95, ymax = uci95, fill = medical_need), alpha = 0.3,fill = "#00204DFF") +
-  geom_ribbon(aes(ymin = lci50, ymax = uci50, fill = medical_need), alpha = 0.3,fill = "#00204DFF") +
-  geom_ribbon(aes(ymin = lci25, ymax = uci25, fill = medical_need), alpha = 0.3,fill = "#00204DFF") +
+  geom_ribbon(aes(ymin = lci, ymax = uci), alpha = 0.7, fill = "#00204DFF") +
   geom_line() +
-  geom_point(data = sd_covid_data, 
+  geom_point(data = sd_covid_plot_data, 
              aes(x = date, y = hospitalized),
              shape = 21, fill = "yellow",
-             size = 2) +
-  scale_x_date(limits = ymd(c("2020-03-10", "2020-05-15"))) +
-  coord_cartesian(ylim = c(0,200)) +
-  # facet_wrap(~generation_time) +
+             size = 1.5) +
+  scale_x_date(limits = ymd(c("2020-03-10", "2020-05-01"))) +
+  coord_cartesian(ylim = c(0,150)) +
+  facet_wrap(~generation_time) +
   labs(title = "How well do models match current data?",
        subtitle = "(dots = real data)",
        y = "Cumulative number hospitalized",
@@ -441,40 +428,43 @@ hosp_zoomed <- cum_hosp %>%
   theme(text = element_text(size = 11)) +
   NULL
 
+
 both_hosp <- plot_grid(hosp, hosp_zoomed, ncol = 1, rel_heights = c(1,0.8))
 both_hosp
 ggsave(both_hosp, file = here::here("plots/both_hosp.jpg"), width = 8, height = 8)
 ```
 
-This plot shows the predicted number of hospital beds, ICU beds, and ventilators over time. The horizontal black line shows the total number of hospital beds in South Dakota*. 
+This plot shows the predicted number of hospital beds, ICU beds, and ventilators needed under each scenario. The horizontal black line shows the total number of hospital beds in South Dakota*. 
 
 The plot on the bottom shows the predicted *cumulative* number of beds compared to the actual cumulative hospital beds used. 
 *(sources: https://apps.sd.gov/ph04lassnet/rptPH04LicenseList.Aspx and https://doh.sd.gov/providers/preparedness/hospital-preparedness/system/bed-avail.aspx)
 
-The model indicates that resource needs will peak with numbers indicated in Table 2.
+The model with a 7-day generation time appears to best match the actual hospitalization data. It indicates that peak resource use will occur ~June 1 with numbers indicated in Table 2.
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
 beds_needed <- all_hosp %>% 
-  group_by(date, medical_need) %>% 
+  group_by(date, medical_need, generation_time) %>% 
   mutate(number = value*884235) %>% 
   drop_na(number) %>% 
   summarize(mean = mean(number),
             lci = quantile(number, probs = 0.025),
             uci = quantile(number, probs = 0.975)) %>% 
   ungroup() %>% 
-  group_by(medical_need) %>% 
+  group_by(medical_need, generation_time) %>% 
   mutate(mean = round(max(mean),0),
          lower95 = round(max(lci),0),
          upper95 = round(max(uci),0)) %>% 
-  distinct(medical_need, .keep_all = T) %>% 
+  distinct(medical_need, generation_time, .keep_all = T) %>% 
+  filter(grepl("7", generation_time)) %>% 
   select(medical_need, mean, lower95, upper95) %>% 
   ungroup() %>% 
   mutate(medical_need = case_when(medical_need == "hospital_beds" ~ "Hospital Beds",
                                   medical_need == "icu_beds" ~ "ICU Beds",
-                                  TRUE ~ "Ventilators")) 
+                                  TRUE ~ "Ventilators")) %>% 
+  select(-generation_time)
 
 write.csv(beds_needed, file = here::here("data/beds_needed.csv"))
 
-kable_styling(kable(beds_needed, caption = "Table 2. Estimated peak medical needs in South Dakota. ", format = "pandoc",
+kable_styling(kable(beds_needed, caption = "Table 2. Estimated peak medical needs in South Dakota. Dates for peak need are currently projected as early June, 2020. ", format = "pandoc",
       col.names = c("Need", "Mean", "Lower95", "Upper95")),
       full_width = F) %>%
    column_spec(column = 1:2, width = "3in") %>%
@@ -482,11 +472,11 @@ kable_styling(kable(beds_needed, caption = "Table 2. Estimated peak medical need
 ```
 
 # Caveats
-Our main sources of uncertainty in these models are generation time, R0, and rates of hospitalization, ICU, and ventilator needs. All projections indicate that SD is at the very early stages of predicted exponential growth. That makes predictions in the future difficult to state with any certainty. As data are released, we will continue to update these projections semi-daily. 
+Our main source of uncertainty in these models is generation time and R0, but all projections indicate that SD is at the very early stages of predicted exponential growth. That makes predictions in the future difficult to state with any certainty. As data are released, we will continue to update these projections semi-daily. 
 
 At present, our data treat South Dakota as a homogenous mixture, though as of this writing most of the cases are concentrated in Minnehaha county. Future models that include regional projections may be warranted. 
 
-Projections also assume single distributions of hospitalization, ICU, and ventilator rates. This is a simplification that likely leads to conservative estimates in our model, which does not currently account for the fact that older infected persons are more likely to require hospitalization, ICU, or ventilator support at rates exceeding the population average. Future age-structured projections will help to alleviate this uncertainty. 
+Projections also assume a fixed hospitalization rate. This is a simplification that likely leads to conservative estimates in our model, which does not currently account for the fact that older infected persons are more likely to require hospitalization, ICU, or ventilator support at rates above 4%. Future age-structured projections will help to alleviate this uncertainty. 
 
 # Notes
 The predictions here are purely our own and may not reflect opinions of our state or our employers. We welcome feedback.
